# PotatoChips-AI

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prisma.config.ts
agents/agt_statarb_001/: README.md  backtest.py  main.py  pyproject.toml
agents/agt_statarb_001/config/: default.yaml
agents/agt_statarb_001/statarb_agent/: __init__.py  agent.py  config.py  market_data.py  statistics.py  storage.py  types.py
agents/agt_statarb_001/tests/: test_cointegration.py  test_signals.py
agents/agt_submission_test_001/: README.md  gpt-capital-agent.json  main.py
agents/agt_trend_001/: README.md  backtest.py  main.py  pyproject.toml
agents/agt_trend_001/config/: default.yaml
agents/agt_trend_001/tests/: test_market_data_providers.py  test_position_sizing.py  test_signals.py
agents/agt_trend_001/trend_agent/: __init__.py  agent.py  config.py  indicators.py  market_data.py  storage.py  types.py
agents/agt_vol_001/: README.md  backtest.py  main.py  pyproject.toml
agents/common/: __init__.py  market_data.py
clerk-nextjs/: package-lock.json
db/alloydb/: 001_initial_schema.sql  002_agent_runtime.sql  003_alpaca_paper_trading.sql  004_cio_allocation_state.sql  005_agent_learning.sql  006_hr_agent_runtime.sql  (+3 more)
docs/: target-architecture.md
gpt-capital-submission/: pyproject.toml
gpt-capital-submission/contract/: README.md  __init__.py  openapi.yaml  schemas.py
gpt-capital-submission/replay_data/: gold_replay_v1.jsonl
gpt-capital-submission/sdk/: __init__.py
gpt-capital-submission/sdk/python/examples/: __init__.py
gpt-capital-submission/sdk/python/examples/example_flickering/: Dockerfile  __init__.py  app.py
gpt-capital-submission/sdk/python/examples/example_hallucinogenic/: Dockerfile  __init__.py  app.py
gpt-capital-submission/sdk/python/examples/example_momentum/: Dockerfile  __init__.py  app.py
gpt-capital-submission/sdk/python/examples/example_silent/: Dockerfile  __init__.py  app.py
gpt-capital-submission/sdk/python/examples/example_static_introspection/: Dockerfile  __init__.py  app.py
gpt-capital-submission/sdk/python/gptcap/: __init__.py  server.py  strategy.py
gpt-capital-submission/tests/: __init__.py  fakes.py  test_contract_sync.py  test_validator_examples.py
gpt-capital-submission/validator/: __init__.py  cli.py  client.py  config.py  runtime.py  scorecard.py  service.py
gpt-capital-submission/validator/gates/: __init__.py  activity_rate.py  introspection_coverage.py  liveness.py  responsiveness.py  schema_conformance.py
gpt-capital-submission/validator/packaging/: __init__.py  client.py  evaluator.py  models.py
gpt-capital-submission/validator/replay/: __init__.py  gold.py  loader.py  models.py  runner.py
prisma/: schema.postgresql.prisma  schema.prisma
scripts/: backtest_benchmark.py  check-data-providers.mjs  prisma-generate.mjs
src/: auth.ts
(+257 files in other folders)
